--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,14 +22,9 @@ jobs:
           node-version: '20'
           cache: 'pnpm' # Cache pnpm modules
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8
+      - name: Enable Corepack
+        run: corepack enable # This enables pnpm and yarn
 
-      - name: Install pnpm
-        run: npm install -g pnpm  # Ensures pnpm is available
-        
       - name: Install dependencies
         run: pnpm install --frozen-lockfile # Use --frozen-lockfile for CI to ensure exact versions
 
