--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-rate-limit": "^7.5.1",
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
+    "prom-client": "^15.1.3",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
     "yamljs": "^0.3.0",
