--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "pnpm exec prisma generate && tsc",
+    "build": "pnpm exec prisma generate && tsc && cp swagger.yaml dist/",
     "start": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
